...
    if (projection.items.isEmpty) {
      return Scaffold(
        body: const Center(child: Text('地点/区間がありません')),
        floatingActionButton: widget.topicConfig.addMenuItems.isEmpty
            ? null
            : FloatingActionButton(
                key: const Key('michiInfo_fab_add'),
                onPressed: () => context
                    .read<MichiInfoBloc>()
                    .add(const MichiInfoInsertModeFabPressed()),
                backgroundColor: const Color(0xFFF59E0B),
                foregroundColor: Colors.white,
                child: Icon(
...
